--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="./react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <script type="module" crossorigin src="/assets/index.bcad1d81.js"></script>
-    <link rel="stylesheet" href="/assets/index.c4195633.css">
+    <script type="module" crossorigin src="./assets/index.bcad1d81.js"></script>
+    <link rel="stylesheet" href="./assets/index.c4195633.css">
   </head>
   <body>
     <div id="root"></div>
